2006-03-10  Zoltan Varga  <vargaz@gmail.com>

	* MonoCustomAttrs.cs (IsDefined): Avoid a runtime assert if a type
	overwrites GetCustomAttributes () but not IsDefined ().

2006-03-07  Martin Baulig  <martin@ximian.com>

	* String.cs (String.FormatHelper): Try getting an `ICustomFormatter'
	from the `provider' if possible.

2006-02-15  Martin Baulig  <martin@ximian.com>

	* Type.cs (Type.IsGenericInstance): Removed.

2006-02-10  Zoltan Varga  <vargaz@gmail.com>

	* Array.cs: Fix some methods which previously returned Nullable<T>.

	* Nullable.cs: Add T: struct constraint and fix constructor.

2006-01-31  Zoltan Varga  <vargaz@gmail.com>

	* String.cs: Implement one of the new net 2.0 Split methods.

2006-01-31  Atsushi Enomoto  <atsushi@ximian.com>

	* String.cs : (LastIndexOf) Fixed bug #77412. It should not expect
	  that value length is bigger than its index.

2006-01-27  Zoltan Varga  <vargaz@gmail.com>

	* DateTime.cs: Add some 2.0 methods and properties.

2006-01-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Console.cs: if InternalCodePage returns -1, use the default encoding.
	Also match the UTF8 one properly. Patch by wall_john@sohu.com.

2006-01-05  Raja R Harinath  <rharinath@novell.com>

	Fix regressions introduced by the fix to #71300.
	* Activator.cs (CreateInstance): Use Binder.SelectMethod instead
	of home-grown FindBestCtor.
	(FindBestCtor): Delete.

2006-01-03  Zoltan Varga  <vargaz@gmail.com>

	* Nullable.cs: Update to Net 2.0 RTM.
	
	* Nullable.cs: Add comments about runtime dependencies on the layout of
	this type.

2006-01-02  Sebastien Pouliot  <sebastien@ximian.com>

	* Activator.cs: Now find the best ctor when null are used for 
	paramaters. Fix bug #71300. Added checks for specific types (void,
	TypedReference, ArgIterator and RuntimeArgumentHandle).
	* Console.cs: Re-use Environment logic to detect Windows.
	* Type.cs: Re-applied r45150 as the real bug was in Activator.

2006-01-02  Zoltan Varga  <vargaz@gmail.com>
