@@ -1,3 +1,7 @@
+2006-03-16  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* Double.cs : (Parse) reject String.Empty.
+
 2006-03-10  Zoltan Varga  <vargaz@gmail.com>
 
 	* MonoCustomAttrs.cs (IsDefined): Avoid a runtime assert if a type
